--- a/code/Engine/Engine.vcxproj
+++ b/code/Engine/Engine.vcxproj
@@ -22,7 +22,17 @@
     <ProjectGuid>{F96F0195-C4F9-4D09-8235-B056782CE941}</ProjectGuid>
   </PropertyGroup>
   <ItemGroup>
+    <ClCompile Include="Allocators.cpp" />
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="crc32.cpp" />
+    <ClCompile Include="Profiler.cpp" />
+    <ClCompile Include="Win32Fibers.cpp" />
+    <ClCompile Include="Path.cpp" />
+    <ClCompile Include="Win32OS.cpp" />
+    <ClCompile Include="SEMath.cpp" />
+    <ClCompile Include="SEString.cpp" />
+    <ClCompile Include="Stream.cpp" />
+    <ClCompile Include="Win32Atomic.cpp" />
     <ClCompile Include="CoreLogSystem.cpp" />
     <ClCompile Include="CoreLogThread.cpp" />
     <ClCompile Include="Logger.cpp" />
@@ -32,25 +42,49 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Win32Sync.cpp" />
+    <ClCompile Include="Win32Thread.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Allocator.h" />
+    <ClInclude Include="Allocators.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="ApplicationSettings.h" />
+    <ClInclude Include="Array.h" />
     <ClInclude Include="AssertMacros.h" />
+    <ClInclude Include="AssociativeArray.h" />
+    <ClInclude Include="Atomic.h" />
     <ClInclude Include="BaseHeader.h" />
     <ClInclude Include="BaseMacros.h" />
     <ClInclude Include="ConfigEngine.h" />
     <ClInclude Include="CoreLogSettings.h" />
     <ClInclude Include="CoreLogSystem.h" />
     <ClInclude Include="CoreLogThread.h" />
+    <ClInclude Include="crc32.h" />
+    <ClInclude Include="CRT.h" />
+    <ClInclude Include="Delegate.h" />
+    <ClInclude Include="DelegateList.h" />
     <ClInclude Include="DetectCompiler.h" />
     <ClInclude Include="DetectOS.h" />
     <ClInclude Include="EngineVersionConst.h" />
+    <ClInclude Include="Fibers.h" />
     <ClInclude Include="InlineFunc.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="LogVerbosity.h" />
+    <ClInclude Include="OS.h" />
+    <ClInclude Include="Path.h" />
     <ClInclude Include="PlatformCoreLog.h" />
+    <ClInclude Include="Profiler.h" />
+    <ClInclude Include="Ref.h" />
+    <ClInclude Include="SEMath.h" />
+    <ClInclude Include="SEString.h" />
+    <ClInclude Include="SIMD.h" />
+    <ClInclude Include="SimpleWindows.h" />
+    <ClInclude Include="Span.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Stream.h" />
+    <ClInclude Include="Sync.h" />
+    <ClInclude Include="Thread.h" />
     <ClInclude Include="VersionOSConst.h" />
     <ClInclude Include="Win32PlatformDefinitions.h" />
     <ClInclude Include="WindowsPlatformCoreLog.h" />
@@ -132,6 +166,7 @@
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <WarningLevel>EnableAllWarnings</WarningLevel>
       <ForcedIncludeFiles>stdafx.h</ForcedIncludeFiles>
+      <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -150,6 +185,7 @@
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <WarningLevel>EnableAllWarnings</WarningLevel>
       <ForcedIncludeFiles>stdafx.h</ForcedIncludeFiles>
+      <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -169,6 +205,7 @@
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <WarningLevel>EnableAllWarnings</WarningLevel>
       <ForcedIncludeFiles>stdafx.h</ForcedIncludeFiles>
+      <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -190,6 +227,7 @@
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <WarningLevel>EnableAllWarnings</WarningLevel>
       <ForcedIncludeFiles>stdafx.h</ForcedIncludeFiles>
+      <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
