--- a/code/Engine/Engine.vcxproj
+++ b/code/Engine/Engine.vcxproj
@@ -25,7 +25,15 @@
     <ClCompile Include="Allocators.cpp" />
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="crc32.cpp" />
+    <ClCompile Include="FileSystem.cpp" />
+    <ClCompile Include="Geometry.cpp" />
+    <ClCompile Include="InputSystem.cpp" />
+    <ClCompile Include="JobSystem.cpp" />
     <ClCompile Include="Profiler.cpp" />
+    <ClCompile Include="Resource.cpp" />
+    <ClCompile Include="ResourceManager.cpp" />
+    <ClCompile Include="Serializer.cpp" />
+    <ClCompile Include="Win32ControllerDevice.cpp" />
     <ClCompile Include="Win32Fibers.cpp" />
     <ClCompile Include="Path.cpp" />
     <ClCompile Include="Win32OS.cpp" />
@@ -57,6 +65,7 @@
     <ClInclude Include="BaseHeader.h" />
     <ClInclude Include="BaseMacros.h" />
     <ClInclude Include="ConfigEngine.h" />
+    <ClInclude Include="ControllerDevice.h" />
     <ClInclude Include="CoreLogSettings.h" />
     <ClInclude Include="CoreLogSystem.h" />
     <ClInclude Include="CoreLogThread.h" />
@@ -68,15 +77,25 @@
     <ClInclude Include="DetectOS.h" />
     <ClInclude Include="EngineVersionConst.h" />
     <ClInclude Include="Fibers.h" />
+    <ClInclude Include="FileSystem.h" />
+    <ClInclude Include="FlagSet.h" />
+    <ClInclude Include="Geometry.h" />
+    <ClInclude Include="HashMap.h" />
     <ClInclude Include="InlineFunc.h" />
+    <ClInclude Include="InputSystem.h" />
+    <ClInclude Include="JobSystem.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="LogVerbosity.h" />
     <ClInclude Include="OS.h" />
     <ClInclude Include="Path.h" />
     <ClInclude Include="PlatformCoreLog.h" />
     <ClInclude Include="Profiler.h" />
+    <ClInclude Include="Queue.h" />
     <ClInclude Include="Ref.h" />
+    <ClInclude Include="Resource.h" />
+    <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="SEMath.h" />
+    <ClInclude Include="Serializer.h" />
     <ClInclude Include="SEString.h" />
     <ClInclude Include="SIMD.h" />
     <ClInclude Include="SimpleWindows.h" />
